# Rust-ML-Web-App-For-AWS-Lambda-

./: Cargo.toml  Makefile
src/: lib.rs  main.rs
