[package]
name = "webdocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
ndarray = "0.15"
onnxruntime = "0.0.14"
serde_json = "1.0.94"
actix-web = "4.3.1"
lambda-web = { version = "0.2.0", features=["actix4"] }